@@ -1,0 +1,8 @@
+##fileformat=VCFv4.3
+##contig=<ID=1,assembly=b37,length=249250621>
+##reference=file:ref.fa
+#CHROM	POS	ID	REF	ALT	QUAL	FILTER	INFO
+1	3000000	.	C	CAA	.	.	.
+1	3000150	.	C	CTT	.	.	.
+1	3000152	.	C	CA	.	.	.
+1	3000154	.	C	T	.	.	.
